# skymaker

./: configure.ac  skymaker.spec.in
doc/src/: conf.py  conf.py.in
man/: Makefile.am  TwoMassToSky.1  mergeFHdr.1  sky.1
src/: Makefile.am  TwoMassToSky.cxx  TwoMassToSky.h  alterimage.h  corr.c  corr.h  define.h  fft.h  fitswcs.c  fitswcs.h  galaxies.c  galaxies.h  globals.h  image.c  image.h  imaout.c  imaout.h  key.h  list.h  makeit.c  mergeFHdr.py  noise.c  noise.h  poly.c  poly.h  preflist.h  prefs.c  prefs.h  psf.c  psf.h  random.c  random.h  rasters.c  rasters.h  simul.c  simul.h  sky.c  stars.c  stars.h  threads.h  (+2 more)
src/fits/: Makefile.am  fitsbody.c  fitscat.h  fitscheck.c  fitshead.c  fitskey.c  fitsmisc.c  fitsutil.c  fitswrite.c
